@@ -6,7 +6,6 @@
 
 .all_aesthetics <- c("adj", "alpha", "angle", "bg", "cex", "col", "color", "colour", "fg", "fill", "group", "hjust", "label", "linetype", "lower", "lty", "lwd", "max", "middle", "min", "order", "pch", "radius", "sample", "shape", "size", "srt", "upper", "vjust", "weight", "width", "x", "xend", "xmax", "xmin", "xintercept", "y", "yend", "ymax", "ymin", "yintercept", "z")
 
-
 .base_to_ggplot <- c(
   "col"   = "colour",
   "color" = "colour",
@@ -33,7 +32,8 @@
 #' @param x,y,... List of name value pairs giving aesthetics to map to
 #'   variables. The names for x and y aesthetics can be omitted (because
 #'   they are so common); all other aesthetics must be named.
-#' @family aesthetic generators
+#' @seealso See \code{\link{aes_q}}/\code{\link{aes_string}} for standard
+#'   evaluation versions of \code{aes}.
 #' @seealso See
 #'    \code{\link{aes_colour_fill_alpha}}, \code{\link{aes_group_order}},
 #'    \code{\link{aes_linetype_size_shape}} and \code{\link{aes_position}}
@@ -98,56 +98,84 @@ is_position_aes <- function(vars) {
   aes_to_scale(vars) %in% c("x", "y")
 }
 
-#' Define aesthetic mappings from a string/quoted objects
+#' Define aesthetic mappings from strings, or quoted calls and formulas.
 #'
 #' Aesthetic mappings describe how variables in the data are mapped to visual
 #' properties (aesthetics) of geoms. \code{\link{aes}} uses non-standard
-#' evaluation to capture the variable names. These two variants use
-#' regular evaluation, which is easier to use inside functions.
+#' evaluation to capture the variable names. \code{aes_q} and \code{aes_string}
+#' require you to explicitly quote the inputs either with \code{""} for
+#' \code{aes_string()}, or with \code{quote} or \code{~} for \code{aes_q()}.
+#'
+#' It's better to use \code{aes_q()}, because there's no easy way to create the
+#' equivalent to \code{aes(colour = "my colour")} or \code{aes{x = `X$1`}}
+#' with \code{aes_string()}.
 #'
 #' \code{aes_string} and \code{aes_q} are particularly useful when writing
 #' functions that create plots because you can use strings or quoted
 #' names/calls to define the aesthetic mappings, rather than having to use
 #' \code{\link{substitute}} to generate a call to \code{aes()}.
 #'
-#' @param x,y,... List of name value pairs
-#' @family aesthetic generators
+#' @param x,y,... List of name value pairs. Elements must be either
+#'   quoted calls, strings, one-sided formulas or constants.
 #' @seealso \code{\link{aes}}
 #' @export
 #' @examples
 #' # Three ways of generating the same aesthetics
 #' aes(mpg, wt, col = cyl)
-#' aes_string("mpg", "wt", col = "cyl")
 #' aes_q(quote(mpg), quote(wt), col = quote(cyl))
+#' aes_q(~mpg, ~wt, col = ~cyl)
+#' aes_string("mpg", "wt", col = "cyl")
 #'
-#' # aes_string and aes_q are most useful when you have the name of a variable
-#' # stored in a variable
+#' # You can't easily mimic these calls with aes_string
+#' aes(`$100`, colour = "smooth")
+#' aes_q(~ `$100`, colour = "smooth")
+#' # Ok, you can, but it requires a _lot_ of quotes
+#' aes_string("`$100`", colour = '"smooth"')
+#'
+#' # Convert strings to names with as.name
 #' var <- "cyl"
 #' aes(col = x)
-#' aes_string(col = var)
 #' aes_q(col = as.name(var))
+aes_q <- function(x, y, ...) {
+  mapping <- list(...)
+  if (!missing(x)) mapping["x"] <- list(x)
+  if (!missing(y)) mapping["y"] <- list(y)
+
+  as_call <- function(x) {
+    if (is.formula(x) && length(x) == 2) {
+      x[[2]]
+    } else if (is.call(x) || is.name(x) || is.atomic(x)) {
+      x
+    } else {
+      stop("Aesthetic must be a one-sided formula, call, name, or constant.",
+        call. = FALSE)
+    }
+  }
+  mapping <- lapply(mapping, as_call)
+  structure(rename_aes(mapping), class = "uneval")
+}
+
+#' @rdname aes_q
+#' @export
 aes_string <- function(x, y, ...) {
   mapping <- list(...)
   if (!missing(x)) mapping["x"] <- list(x)
   if (!missing(y)) mapping["y"] <- list(y)
 
-  parsed <- lapply(mapping, function(x) {
-    if (!is.character(x)) return(x)
-    parse(text = x)[[1]]
+  mapping <- lapply(mapping, function(x) {
+    if (is.character(x)) {
+      parse(text = x)[[1]]
+    } else {
+      x
+    }
   })
-  structure(rename_aes(parsed), class = "uneval")
-}
-
-#' @rdname aes_string
-#' @export
-aes_q <- function(x = NULL, y = NULL, ...) {
-  mapping <- c(compact(list(x = x, y = y)), list(...))
   structure(rename_aes(mapping), class = "uneval")
 }
 
 #' Given a character vector, create a set of identity mappings
 #'
 #' @param vars vector of variable names
+#' @keywords internal
 #' @export
 #' @examples
 #' aes_all(names(mtcars))
@@ -166,20 +194,11 @@ aes_all <- function(vars) {
 #'
 #' @param data data.frame or names of variables
 #' @param ... aesthetics that need to be explicitly mapped.
+#' @keywords internal
 #' @export
-#' @examples
-#' df <- data.frame(x = 1, y = 1, colour = 1, label = 1, pch = 1)
-#' aes_auto(df)
-#' aes_auto(names(df))
-#'
-#' df <- data.frame(xp = 1, y = 1, colour = 1, txt = 1, foo = 1)
-#' aes_auto(df, x = xp, label = txt)
-#' aes_auto(names(df), x = xp, label = txt)
-#'
-#' df <- data.frame(foo = 1:3)
-#' aes_auto(df, x = xp, y = yp)
-#' aes_auto(df)
 aes_auto <- function(data = NULL, ...) {
+  warning("aes_auto() is deprecated", call. = FALSE)
+
   # detect names of data
   if (is.null(data)) {
     stop("aes_auto requires data.frame or names of data.frame.")
