@@ -16,4 +16,5 @@ Given a character vector, create a set of identity mappings
 aes_all(names(mtcars))
 aes_all(c("x", "y", "col", "pch"))
 }
+\keyword{internal}
 
